<?xml version="1.0"?>
<package>
  <name>lcsr_stage</name>
  <version>0.0.0</version>
  <description>The lcsr_stage package</description>

  <maintainer email="jbohren@todo.todo">jbohren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
  <run_depend>barrett_model</run_depend>

  <export>
  </export>
</package>
